kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiseling-ingress
  namespace: wiseling
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8000
      - path: /api/v1/wallet
        pathType: Prefix
        backend:
          service:
            name: wallet-service
            port:
              number: 8001
      - path: /api/v1/conversions
        pathType: Prefix
        backend:
          service:
            name: conversion-service
            port:
              number: 8002
      - path: /api/v1/withdrawals
        pathType: Prefix
        backend:
          service:
            name: withdrawal-service
            port:
              number: 8003
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
